# repl-discord-auth

./: betterbot.py  commands.py  database.py  discordbot.py  main.py  pyproject.toml  replit.py  requirements.txt  server.py  site_url.txt
templates/: apidocs.html  base.html  index.html  link.html  linked.html
